[package]
name = "rust_json_benchmark"
version = "0.1.0"
edition = "2018"
description = "benchmark for rust-json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"

[dependencies]
serde_json = "1.0"
rust_json = {version = "0.1", path = "../rust_json/"}
rust_json_derive = {version = "0.1", path = "../rust_json_derive/"}

[[bench]]
name = "json"
harness = false