[package]
name = "rust_json_test"
version = "0.1.0"
edition = "2018"
description = "tests for rust-json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_json = {version = "0.1", path = "../rust_json/"}
rust_json_derive = {version = "0.1", path = "../rust_json_derive/"}